<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_enrolment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.edu.holmesglen.kirstine_n.tute3teacherlogin.EnrolmentActivity"
    tools:showIn="@layout/activity_enrolment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enrolment_headline"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/radGroup_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_networking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enrolment_label_networking"/>

        <RadioButton android:id="@+id/radio_software_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enrolment_label_software_dev"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_student_data_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="32dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrolment_label_student_id" />

            <EditText
                android:id="@+id/et_student_id_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrolment_label_firstname" />

            <EditText
                android:id="@+id/et_firstname_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrolment_label_lastname" />

            <EditText
                android:id="@+id/et_lastname_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_enrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrolment_btn_enrol"/>

            <Button
                android:id="@+id/btn_classlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrolment_btn_classlist"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
